# home-phone

./: Cargo.toml  README.md  build.rs  link.ld  memory.x  openocd.cfg
.cargo/: config
lib/: Cargo.toml
lib/src/: keypad.rs  lib.rs  logger.rs  phone_number.rs  rtc.rs  sys_clock.rs
lib/src/display/: mod.rs  row_formatter.rs  row_storage.rs
lib/src/keypad/: event_buffer.rs  mod.rs
lib/src/net/: loopback.rs  mod.rs
lib/src/phone_state/: call_pending_state_data.rs  idle_state_data.rs  in_call_state_data.rs  mod.rs
lib/src/sync/: mod.rs
nucleo-f767zi/: Cargo.toml
nucleo-f767zi/src/: debug_console.rs  led.rs  lib.rs
src/: board_info.rs  main.rs  panic_handler.rs  time.rs
src/display/: row.rs
src/eth/: mod.rs
src/keypad/: event_buffer.rs  mod.rs
src/net/: eth.rs  mod.rs
src/phone_state/: in_call_state_data.rs
src/sync/: lock.rs
stm32f767-hal/: Cargo.toml
stm32f767-hal/src/: delay.rs  flash.rs  gpio.rs  iwdg.rs  lib.rs  prelude.rs  rcc.rs  serial.rs  time.rs  timer.rs
tests/: emulated_phy_loopback.rs
tools/: qemu-runner  test-all
