cargo-features = ["profile-overrides"]

[package]
name = "home-phone"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

# Using a workspace layout to make it easier
# to get integration tests working
[workspace]
members = [
  "lib",
]

[dependencies.lib]
path = "lib"

[dependencies.raspi4-boot]
path = "deps/raspi4-boot/"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
branch = "master"
default-features = false
features = [
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "log",
    "verbose"
]

[dev-dependencies.test-runner]
path = "deps/test-runner"

[dev-dependencies.qemu]
path = "deps/qemu"

# Things break if _boot_cores isn't optimized
[profile.dev.overrides.raspi4-boot]
opt-level = 3

[package.metadata.cargo-xbuild]
sysroot_path = "target/sysroot"
