[package]
name = "home-phone"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Using a workspace layout to make it easier
# to get integration tests working
[workspace]
members = [
  "lib",
]

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"

[dependencies.lib]
path = "lib"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
branch = "master"
default-features = false
features = [
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "log",
    "verbose"
]
