[package]
name = "lib"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
typenum = "1.10"
heapless = "0.5"
ds323x = "0.2"

[dependencies.bcm2711-hal]
git = "https://github.com/jonlamb-gh/rpi4-rust-workspace.git"
branch = "master"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.arrayvec]
version = "0.4"
default-features = false
features = ["array-sizes-33-128"]

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
branch = "master"
default-features = false
features = [
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "log",
    "verbose"
]

[dependencies.nom]
version = "5.0"
default-features = false
features = []

[dev-dependencies.raspi3_boot]
git = "https://github.com/jonlamb-gh/rpi4-rust-workspace.git"
branch = "master"
default-features = false
features = []

[dev-dependencies.test-runner]
path = "../deps/test-runner"

[dev-dependencies.qemu]
path = "../deps/qemu"

[package.metadata.cargo-xbuild]
sysroot_path = "../target/sysroot"
