[package]
name = "lib"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
typenum = "1.10"
heapless = "0.5"
ds323x = "0.2"
cortex-m = "0.6"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f429"]
git = "https://github.com/jonlamb-gh/stm32f4xx-hal.git"
branch = "home-phone-changes"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.arrayvec]
version = "0.4"
default-features = false
features = ["array-sizes-33-128"]

[dependencies.smoltcp]
git = "https://github.com/m-labs/smoltcp.git"
branch = "master"
default-features = false
features = [
    "proto-ipv4",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
    "log",
    "verbose"
]

[dependencies.nom]
version = "5.0"
default-features = false
features = []

[dependencies.keypad]
git = "https://github.com/jonlamb-gh/keypad.git"
branch = "digital-v2"

[dev-dependencies.embedded-hal]
features = ["unproven"]
version = "*"

[dev-dependencies.void]
default-features = false
version = "*"
