[package]
name = "nucleo-f767zi"
authors = ["Jon Lamb"]
edition = "2018"
description = "Board Support Crate for the NUCLEO-F767ZI"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
stm32f767-hal = { path = "../stm32f767-hal" }

[dev-dependencies.nb]
version = "0.1.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dev-dependencies.stm32f767-hal]
path = "../stm32f767-hal"
features = ["rt"]

[dev-dependencies]
aligned = "0.3.1"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.2"
madgwick = "0.1.1"

[features]
rt = ["stm32f767-hal/rt"]
