[package]
name = "stm32f767-hal"
authors = ["Jon Lamb"]
edition = "2018"
description = "HAL for the STM32F767ZIT6 microcontroller"
keywords = ["no-std", "arm", "cortex-m", "stm32"]
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
nb = "0.1.2"
embedded_types = "0.3.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

[dependencies.oxcc-stm32f767]
#version = "0.1.0"
features = ["rt"]
git = "https://github.com/jonlamb-gh/oxcc-stm32f767.git"
branch = "updates"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["oxcc-stm32f767/rt"]
